styles done. correct gap for small content

--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -7,13 +7,13 @@
   row-gap: 20px;
   align-items: start;
   justify-items: center;
-  height: 300px;
+  max-height: 300px;
   column-gap: 18px;
 }
 @media only screen and (min-width: 768px) {
   .grid {
     gap: 15px 62px;
-    height: 305px;
+    max-height: 305px;
   }
 }
 @media only screen and (min-width: 1440px) {
@@ -25,17 +25,18 @@
 /* ===== 8-days week view ===== */
 .grid8 {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   row-gap: 20px;
   align-items: start;
   justify-items: center;
-  height: 300px;
+  max-height: 300px;
   column-gap: 18px;
 }
 @media only screen and (min-width: 768px) {
   .grid8 {
+    grid-template-columns: repeat(8, 1fr);
     gap: 15px 48px;
-    height: 305px;
+    max-height: 305px;
   }
 }
 @media only screen and (min-width: 1440px) {
